# bigquery-gpt

./: .gitignore  Dockerfile  README.md  docker-compose.yml.sample
app/: main.py  setup.cfg
app/files/: openapi.yaml
app/gpt_bigquery/: data_models.py  routers.py  tags.py
