[metadata]
name = gpt_bigquery
description = ChatGPT BigQuery Plugin
author = Assil Jwair
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
install_requires =
    fastapi>=0.109.0
    google-cloud-bigquery>=3.16.0
    google-cloud-secret-manager>=2.17.0
    uvicorn>=0.27.0

python_requires = >=3.11
package_dir =
    =gpt_bigquery
packages=find:
zip_safe = no

[options.packages.find]
where=gpt_bigquery

[options.package_data]
brobot_coins_tuner = py.typed

[flake8]
max-line-length = 160